[features]
nightly = ["pulp/nightly"]
# Treat warnings as a build error.
strict = []
sleef = ["rlst/sleef"]
default = []
mpi = ["dep:mpi", "dep:bempp-distributed-tools", "rlst/mpi"]


[package]
name = "green-kernels"
version = "0.2.2-dev"
edition = "2021"
authors = ["Timo Betcke <timo.betcke@gmail.com>", "Matthew Scroggs <rust@mscroggs.co.uk>"]
description = "Evaluation of Green's function kernels."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/green-kernels"
repository = "https://github.com/bempp/green-kernels"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "green_kernels"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
paste = "1.*"
libc = "0.2"
approx = { version = "0.5", features = ["num-complex"] }
rayon = "1.9"
num = "0.4"
num_cpus = "1"
rlst = { git = "https://github.com/linalg-rs/rlst.git" }
# rlst = { path = "../rlst", features = ["mpi"] }
rand = "0.9.0"
itertools = { version = "0.14.0", default-features = false }
coe-rs = "0.1.2"
pulp = { version = "0.21" }
bytemuck = "1.16.0"
hexf = "0.2.1"
mpi = { version = "0.8.*", optional = true }
bempp-distributed-tools = { git = "https://github.com/bempp/distributed_tools.git", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand_chacha = "0.9.0"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.clippy]
wildcard_imports = "forbid"

[target.aarch64-apple-darwin.dev-dependencies]
blas-src = { version = "0.10", features = ["accelerate"]}
lapack-src = { version = "0.10", features = ["accelerate"]}

[target.x86_64-unknown-linux-gnu.dev-dependencies]
blas-src = { version = "0.10", features = ["blis"]}
lapack-src = { version = "0.10", features = ["netlib"]}


[[bench]]
name = "laplace_f32"
harness = false

[[bench]]
name = "laplace_f64"
harness = false

[[bench]]
name = "helmholtz_c32"
harness = false

[[bench]]
name = "helmholtz_c64"
harness = false

[[example]]
name = "evaluate_distributed"
required-features = ["mpi"]

